# knit-simulation

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindFilesystem.cmake
example_data/: 5_5_PostRun.yarns  5_5_constraint.json  5_5_constraint_pbc.json  knit-4x4_constraint-alt.json  knit-4x4_constraint.json
project_data/: swatch12x8ribbing.k  swatch12x8ribbing.smobj  swatch12x8ribbing.yarns  swatch4x4.k  swatch4x4.smobj  swatch4x4.yarns  swatch4x4garter.k  swatch4x4garter.smobj  swatch4x4garter.yarns  swatch6x8doublemoss.k  swatch6x8doublemoss.smobj  swatch6x8doublemoss.yarns
src/: main.cpp
src/file_format/: YarnConstraints.cpp  YarnConstraints.h
src/simulator/: BaseSimulator.cpp  BaseSimulator.h  Constraints.cpp  Constraints.h  DiscreteSimulator.cpp  DiscreteSimulator.h  JacobiMethod.h  Simulator.cpp  Simulator.h  SimulatorParams.h
src/ui/: AnimationManager.cpp  FilePicker.h  knitpurlExplorer.cpp  knitpurlExplorer.h  menu.cpp  texture.h  viewer.cpp  viewer.h
